# kinic-context-engine

./: .gitignore  Cargo.toml  README.md  icp.yaml  plan.md
crates/kinic_context_core/: Cargo.toml
crates/kinic_context_core/src/: catalog.rs  client.rs  config.rs  launcher.rs  lib.rs  memory.rs  types.rs
crates/kinic_context_core/tests/: wire_tests.rs
src/: catalog.rs  cli.rs  config.rs  engine.rs  lib.rs  main.rs  model.rs  output.rs  provider.rs
tests/: acceptance_live_tests.rs  cli_tests.rs  engine_tests.rs
tools/: README.md  source_ingest_spec.md  source_payload_schema.md
tools/catalog_canister/: Cargo.toml  README.md  build.rs  catalog.seed.candid  catalog.seed.json  catalog_canister.did
tools/catalog_canister/migrations/: 000_initial.sql  001_skill_metadata.sql
tools/catalog_canister/src/: lib.rs  sqlite_runtime.rs
tools/catalog_canister/src/seeds/: mod.rs  seed_001_builtin_sources.rs
tools/fake_memory_instance/: Cargo.toml
tools/fake_memory_instance/src/: lib.rs
tools/pocket_ic_tests/: Cargo.toml
tools/pocket_ic_tests/src/: lib.rs
tools/pocket_ic_tests/tests/: catalog_e2e.rs  cli_flow.rs
tools/pocket_ic_tests/tests/common/: fixtures.rs  mod.rs  pocketic.rs
tools/source_ops/: README.md  __init__.py  apply_catalog.py  apply_memory.py  collect.py  common.py  config.py  diff.py  kinic_writer.py  normalize.py  registry.py  registry.yaml  run_refresh.py  smoke.py  validate.py
tools/source_ops/state/: manifest.json
tools/source_ops/tests/: __init__.py  test_source_ops.py
