[workspace]
members = [
    ".",
    "crates/kinic_context_core",
    "tools/catalog_canister",
    "tools/fake_memory_instance",
    "tools/pocket_ic_tests",
]

[package]
name = "kinic-context-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ICME-Lab/kinic-context-engine"
description = "Read-only CLI for source resolution, retrieval, and evidence pack generation on KINIC."
readme = "README.md"
keywords = ["internet-computer", "cli", "rag", "context", "kinic"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
kinic_context_core = { path = "crates/kinic_context_core" }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
