[package]
name = "catalog_canister"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ICME-Lab/kinic-context-engine"
description = "Catalog canister for mapping logical source IDs to KINIC memory instances."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.20"
ic-cdk = "0.18.7"
ic-sql-migrate = { version = "0.0.5", features = ["sqlite"] }
kinic_context_core = { path = "../../crates/kinic_context_core" }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[build-dependencies]
ic-sql-migrate = "0.0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-rusqlite = { version = "0.4.3", default-features = false, features = ["precompiled"] }
