[package]
name = "pocket_ic_tests"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ICME-Lab/kinic-context-engine"
description = "PocketIC integration tests for the KINIC context runtime."

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
candid = "0.10.20"
kinic-context-cli = { path = "../.." }
kinic_context_core = { path = "../../crates/kinic_context_core" }
pocket-ic = "12.0.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
